# translator

./: CMakeLists.txt  main.cpp
lexer/: Lexer.cpp  Lexer.h
lexer/Text/: Constant.cpp  Constant.h  Keyword.cpp  Keyword.h  Lexem.h  SingleElm.cpp  SingleElm.h  Variable.cpp  Variable.h
syntax-an/: Analyzer.cpp  Analyzer.h
syntax-an/horrors/: Horrible.h
syntax-an/tree/: TreeNode.cpp  TreeNode.h
tests/test01/: input.txt
tests/test02/: expected.txt  input.txt
tests/test03/: expected.txt  input.txt
tests/test04/: expexted.txt  input.txt
tests/test05/: expected.txt  input.txt
